# OpenHub

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  logging.py  main.py  middleware.py
app/api/: routes_admin.py  routes_agents.py  routes_auth.py  routes_coordination.py  routes_health.py  routes_tasks.py  routes_workflows.py
app/auth/: __init__.py  api_dependencies.py  api_keys.py  dependencies.py  jwt_auth.py  models.py  redis_cache.py
app/auth/rbac/: __init__.py  enforcer.py  models.py  policies.py
app/database/: __init__.py  connection.py  migrations.py
app/database/repositories/: __init__.py  agents.py  base.py  tasks.py
app/models/: __init__.py  agents.py  base.py  events.py  responses.py  tasks.py
app/services/: __init__.py  agent_service.py  capability_matcher.py  discovery_service.py  hatchet_service.py  heartbeat_service.py  task_service.py  workflow_coordinator.py
database/: schema.sql
database/migrations/: 001_initial.sql  002_api_keys.sql
docs/: ARCHITECTURE_EVALUATION.md  AUTOMATION_SCRIPTS.sh  CODEX_PLAN.md  DEVELOPMENT_RULES.md  MULTI_AGENT_HUB_SPEC.md  PROJECT_ROADMAP.md  Windmill Hatchet Kestra Karsilastirma.md
scripts/: dev_start.sh
